Fix font and button colors on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -277,7 +277,7 @@ p.task-item {
   margin: 1rem 2rem;
   width: 80%;
   height: 5rem;
-  border: solid 2.5px;
+  border: solid 2.5px black;
   text-decoration: none;
   font-size: 1rem;
 }
@@ -321,6 +321,7 @@ p.task-item {
 }
 
 button {
+  color: black;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -398,6 +399,7 @@ input,
 label,
 textarea,
 select {
+  color: black;
   margin: 0.5rem;
   font-family: sans-serif;
   font-size: 0.75rem;
@@ -414,6 +416,10 @@ label {
 
 #footer {
   display: none;
+}
+
+a {
+  color: black;
 }
 
 p.footer,
